gcloud app engine testing

--- a/topdowncamera/src/style.css
+++ b/topdowncamera/src/style.css
@@ -80,6 +80,10 @@ body {
   height: calc(var(--grid-cell)*4);
   animation: moveSpriteSheet steps(2) 0.5s;
   animation-iteration-count: infinite;
+  animation-direction: normal;
+  animation-fill-mode: forwards;
+
+
 }
 
 .character_spritesheet[facing="right"] {
@@ -106,16 +110,14 @@ body {
 
 .character_spritesheet[facing="down"][attack="true"] {
   background-position-y: calc(var(--grid-cell)*-4);
-  transform: translate3d(0%, 0%, 0%);
-  animation-iteration-count: 1;
+  animation-iteration-count: 0.5 !important;
 
 }
 
 
 .character_spritesheet[facing="left"][attack="true"] {
   background-position-y: calc(var(--grid-cell)*-5);
-  transform: translate3d(0%, 0%, 0%);
-  animation-iteration-count: 1;
+  animation-iteration-count: 0.5 !important;
 
 
 }
@@ -123,8 +125,7 @@ body {
 
 .character_spritesheet[facing="up"][attack="true"] {
   background-position-y: calc(var(--grid-cell)*-6);
-  transform: translate3d(0%, 0%, 0%);
-  animation-iteration-count: 1;
+  animation-iteration-count: 0.5 !important;
 
 
 }
@@ -132,18 +133,22 @@ body {
 
 .character_spritesheet[facing="right"][attack="true"] {
   background-position-y: calc(var(--grid-cell)*-7);
-  animation-iteration-count: 1;
-  animation-name: moveSpriteSheet;
-
+  animation-iteration-count: 0.5 !important;
 }
 
 
 .character_spritesheet[damage="true"] {
   background-position-y: calc(var(--grid-cell)*-8);
+  filter: hue-rotate(90deg);
+  animation: shake;
+  animation-duration: 0.3s;
+  animation-iteration-count: 1;
+
 }
 
 .character_spritesheet[died="true"] {
   background-position-y: calc(var(--grid-cell)*-9);
+  filter: hue-rotate(180deg);
 
 }
 
@@ -154,6 +159,52 @@ body {
 
   100% {
     transform: translate3d(-100%, 0, 0)
+  }
+}
+
+@keyframes shake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
   }
 }
 
