--- a/client/src/style.css
+++ b/client/src/style.css
@@ -312,6 +312,31 @@ body {
   animation-iteration-count: 0.5 !important;
 }
 
+
+
+
+
+.character_spritesheet[facing="down"][pick="true"] {
+  background-position-y: calc(var(--grid-cell)*-4);
+  animation-iteration-count: 0.5 !important;
+}
+
+.character_spritesheet[facing="left"][pick="true"] {
+  background-position-y: calc(var(--grid-cell)*-5);
+  animation-iteration-count: 0.5 !important;
+}
+
+.character_spritesheet[facing="up"][pick="true"] {
+  background-position-y: calc(var(--grid-cell)*-6);
+  animation-iteration-count: 0.5 !important;
+}
+
+.character_spritesheet[facing="right"][pick="true"] {
+  background-position-y: calc(var(--grid-cell)*-7);
+  animation-iteration-count: 0.5 !important;
+}
+
+
 .character_spritesheet[damage="true"] {
   background-position-y: calc(var(--grid-cell)*-8);
   animation: shake;
@@ -466,6 +491,8 @@ body {
   z-index: -1;
   width: calc(var(--grid-cell));
   height: calc(var(--grid-cell));
+  transition: all 0.4s;
+  transition-timing-function: linear;
 }
 
 .inventoryButton {
@@ -555,12 +582,13 @@ body {
 .primary-button {
   background-color: greenyellow;
   color: black;
-  border-radius: 0px;
+  border-radius: 15px;
   outline-width: 0px;
-  width: 9vh;
-  height: 5vh;
+  width: 14vh;
+  height: 6vh;
   border: 0px;
   font-weight: bolder;
+  font-size: medium;
 }
 
 .primary-button:hover {
@@ -698,4 +726,36 @@ body {
 .connectionStatus[connected="false"] {
   background-color: red;
 
+}
+
+
+
+.itemGameObject {
+  width: 100%;
+  height: 100%;
+  background-size: 100%;
+
+}
+
+.itemPickedStatus {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+
+  top: -60%;
+  z-index: 15;
+}
+
+#eatButton {
+  position: absolute;
+  width: 20%;
+  height: 50%;
+  top: -90px;
+  left: 90px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  color: white;
+
+  /* background-color: red; */
 }
